--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "3.0.3",
-  "name": "gatsby-starter-lumen",
-  "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
+  "version": "0.0.1",
+  "name": "blog",
+  "description": "A blog for codeVentures and brain-thoughts. Also, learning Gatsby while I go.",
   "main": "n/a",
   "scripts": {
     "develop": "yarn run clean && gatsby develop",
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch --config ./jest/jest-config.js"
   },
   "repository": "https://github.com/jeanox/blog.git",
-  "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
+  "author": "Becky Pennock <beckypennock@gmail.com>",
   "license": "MIT",
   "keywords": [
     "gatsby",
